--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -7,7 +7,7 @@ services:
     branch: main
     deploy_on_push: true
   run_command: npm start
-  build_command: npm install
+  build_command: npm install && npm run build
   environment_slug: node-js
   instance_count: 1
   instance_size_slug: basic-xxs
