--- a/package.json
+++ b/package.json
@@ -5,18 +5,39 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "echo 'No build step required'",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:server": "nodemon server.js",
+    "dev:client": "vite",
+    "build": "vite build",
+    "build:server": "node server.js",
+    "preview": "vite preview",
     "test": "echo 'No tests specified'"
   },
   "dependencies": {
     "express": "^4.21.2",
     "cors": "^2.8.5",
     "cookie-parser": "^1.4.6",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
+    "@tanstack/react-query": "^4.24.6",
+    "lucide-react": "^0.312.0",
+    "recharts": "^2.5.0",
+    "clsx": "^1.2.1",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react": "^3.1.0",
+    "vite": "^4.1.0",
+    "typescript": "^4.9.4",
+    "tailwindcss": "^3.2.6",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "concurrently": "^7.6.0"
   },
   "engines": {
     "node": ">=18.0.0"
