--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "nodemon server.js",
     "dev:client": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
+    "build:simple": "vite build",
     "build:server": "node server.js",
     "preview": "vite preview",
-    "test": "echo 'No tests specified'"
+    "test": "echo 'No tests specified'",
+    "postinstall": "echo 'Dependencies installed successfully'"
   },
   "dependencies": {
     "express": "^4.21.2",
@@ -20,8 +22,9 @@
     "bcryptjs": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
+    "wouter": "^3.0.0",
     "@tanstack/react-query": "^4.24.6",
+    "@tanstack/react-query-devtools": "^4.24.6",
     "lucide-react": "^0.312.0",
     "recharts": "^2.5.0",
     "clsx": "^1.2.1",
