--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "vite build",
+    "build": "tsc --noEmit && vite build",
+    "build:simple": "vite build",
     "dev": "vite",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "express": "^4.21.2",
@@ -18,6 +20,7 @@
     "react-dom": "^18.2.0",
     "wouter": "^3.0.0",
     "@tanstack/react-query": "^4.24.6",
+    "@tanstack/react-query-devtools": "^4.24.6",
     "lucide-react": "^0.312.0",
     "recharts": "^2.5.0",
     "clsx": "^1.2.1",
