--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.10",
     "@tanstack/react-query": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
