--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --mode production",
+    "build:dev": "vite build",
     "preview": "vite preview",
     "server": "node server.js",
     "start": "node server.js",
     "setup-db": "echo '⚠️  Please run the SQL setup in Supabase dashboard manually - see SETUP-GUIDE.md'",
     "setup": "npm run build",
-    "deploy": "git add -A && git commit -m \"Deploy update\" && git push"
+    "deploy": "npm run build && git add -A && git commit -m \"Deploy update\" && git push"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.10",
