--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy": "npm run build && git add -A && git commit -m \"Deploy update\" && git push"
   },
   "dependencies": {
+    "@playwright/test": "^1.52.0",
     "@supabase/supabase-js": "^2.49.10",
     "@tanstack/react-query": "^5.0.0",
     "bcryptjs": "^2.4.3",
