--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "^4.21.2",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "lingo.dev": "^0.94.3",
     "lucide-react": "^0.400.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.5.2",
     "recharts": "^2.15.3",
     "wouter": "^3.0.0"
   },
